--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,700;1,300;1,400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link
      rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
@@ -73,7 +75,7 @@
             <!-- If we need navigation buttons -->
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
-            </div>
+        </div>
         <div class="card">
             <div class="card__descrição">
                 <div class="descrição">
@@ -92,6 +94,68 @@
             </div>
         </div>
     </section>
+    <section class="carrossel">
+        <h2 class="carrossel__titulo">MAIS VENDIDOS</h2>
+        <!-- Slider main container -->
+        <div class="swiper">
+            <!-- Additional required wrapper -->
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+            <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide"><img src="img/Nodejs.svg" alt="Livro sobre Nodejs"></div>
+            <div class="swiper-slide"><img src="img/Gestão.svg" alt="Livro sobre Gestão"></div>
+            <div class="swiper-slide"><img src="img/Arquitetura.svg" alt="Livro sobre Arquitetura"></div>
+            <div class="swiper-slide"><img src="img/Construct2.svg" alt="Livro sobre Construct2 "></div>
+            <div class="swiper-slide"><img src="img/UX.svg" alt="Livro sobre UX "></div>
+            <div class="swiper-slide"><img src="img/ReactNative.svg" alt="Livro sobre ReactNative "></div>
+            ...
+            </div>
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+        <div class="card">
+            <div class="card__descrição">
+                <div class="descrição">
+                    <img src="img/Estrelinhas.svg" alt="avaliação da autora" class="descrição__icone">
+                    <h3 class="descrição__titulo">Autora do Mês</h3>
+                    <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
+                    <p class="desrição__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
+                </div>
+                <img src="img/Perfil-escritora 1.svg" alt="foto de perfil da escritora" class="descrição__imagem">
+            </div>
+            <div class="card__botões">
+                <ul class="botões">
+                <li class="botões__item"><img src="img/Favoritos.svg" alt="ícone favoritos"></li>
+                <li class="botões__item"><img src="img/Compras.svg" alt="ícone compras"></li>
+                </ul>
+                <a href="#" class="botões__ancora">Saiba mais</a> 
+            </div>
+        </div>
+    </section>
+    <section class="tópicos">
+        <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+        <ul class="tópicos__lista">
+            <li class="tópicos__item"><a href="#" class="tópicos__link">Android</a></li>
+            <li class="tópicos__item"><a href="#" class="tópicos__link">Marketing Digital</a></li>
+            <li class="tópicos__item"><a href="#" class="tópicos__link">Agile</a></li>
+            <li class="tópicos__item"><a href="#" class="tópicos__link">Startups</a></li>
+            <li class="tópicos__item"><a href="#" class="tópicos__link">HTML & CSS</a></li>
+            <li class="tópicos__item"><a href="#" class="tópicos__link">Python</a></li>
+            <li class="tópicos__item"><a href="#" class="tópicos__link">OO</a></li>
+            <li class="tópicos__item"><a href="#" class="tópicos__link">Java</a></li>
+        </ul>
+    </section>
+    <section class="contato">
+        <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+        <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+        <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
+    </section>
+    <hr/>
+    <footer class="rodapé">
+        <h2 class="rodapé__titulo">Grupo Alura</h2>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper('.swiper', {
