--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="cabeçalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
-            <label for="menu">
+            <label for="menu" class="container__rotulo">
                 <span class="cabeçalho__menu-hamburguer container__imagem"></span>
             </label>
             <ul class="lista-menu">
@@ -47,7 +47,7 @@
         </div>
         <ul class="opções">
             <input type="checkbox" id="opções-menu" class="opções__botão">
-            <label for="opções-menu">
+            <label for="opções-menu" class="opções__rotulo">
                 <li class="opções__item">Categorias</li>
             </label>
             <ul class="lista-menu">
@@ -73,9 +73,17 @@
         </ul>
         
          <div class="container">
-            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem container__imagem-transparente"></a>
-            <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
-            <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
+            <a href="#">
+                <img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem container__imagem-transparente">
+            </a>
+            <a href="#" class="container__link">
+                <img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem">
+                <p class="container__texto">Minha sacola</p>
+            </a>
+            <a href="#" class="container__link">
+                <img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem">
+                <p class="container__texto">Meu perfil</p>
+            </a>
         </div>
     </header>
     <section class="banner">
@@ -86,6 +94,7 @@
     <section class="carrossel">
         <h2 class="carrossel__titulo">Últimos lançamentos</h2>
         <!-- Slider main container -->
+        <div class="carrossel__container">
         <div class="swiper">
             <!-- Additional required wrapper -->
             <!-- If we need pagination -->
@@ -121,44 +130,47 @@
                 <a href="#" class="botões__ancora">Saiba mais</a> 
             </div>
         </div>
+    </div>
     </section>
     <section class="carrossel">
         <h2 class="carrossel__titulo">MAIS VENDIDOS</h2>
         <!-- Slider main container -->
-        <div class="swiper">
-            <!-- Additional required wrapper -->
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-            <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide"><img src="img/Nodejs.svg" alt="Livro sobre Nodejs"></div>
-            <div class="swiper-slide"><img src="img/Gestão.svg" alt="Livro sobre Gestão"></div>
-            <div class="swiper-slide"><img src="img/Arquitetura.svg" alt="Livro sobre Arquitetura"></div>
-            <div class="swiper-slide"><img src="img/Construct2.svg" alt="Livro sobre Construct2 "></div>
-            <div class="swiper-slide"><img src="img/UX.svg" alt="Livro sobre UX "></div>
-            <div class="swiper-slide"><img src="img/ReactNative.svg" alt="Livro sobre ReactNative "></div>
-            ...
-            </div>
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-        <div class="card">
-            <div class="card__descrição">
-                <div class="descrição">
-                    <img src="img/Estrelinhas.svg" alt="avaliação da autora" class="descrição__icone">
-                    <h3 class="descrição__titulo">Autora do Mês</h3>
-                    <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-                    <p class="desrição__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
+        <div class="carrossel__container">
+            <div class="swiper">
+                <!-- Additional required wrapper -->
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+                <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="img/Nodejs.svg" alt="Livro sobre Nodejs"></div>
+                <div class="swiper-slide"><img src="img/Gestão.svg" alt="Livro sobre Gestão"></div>
+                <div class="swiper-slide"><img src="img/Arquitetura.svg" alt="Livro sobre Arquitetura"></div>
+                <div class="swiper-slide"><img src="img/Construct2.svg" alt="Livro sobre Construct2 "></div>
+                <div class="swiper-slide"><img src="img/UX.svg" alt="Livro sobre UX "></div>
+                <div class="swiper-slide"><img src="img/ReactNative.svg" alt="Livro sobre ReactNative "></div>
+                ...
                 </div>
-                <img src="img/Perfil-escritora 1.svg" alt="foto de perfil da escritora" class="descrição__imagem">
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
-            <div class="card__botões">
-                <ul class="botões">
-                <li class="botões__item"><img src="img/Favoritos.svg" alt="ícone favoritos"></li>
-                <li class="botões__item"><img src="img/Compras.svg" alt="ícone compras"></li>
-                </ul>
-                <a href="#" class="botões__ancora">Saiba mais</a> 
+            <div class="card">
+                <div class="card__descrição">
+                    <div class="descrição">
+                        <img src="img/Estrelinhas.svg" alt="avaliação da autora" class="descrição__icone">
+                        <h3 class="descrição__titulo">Autora do Mês</h3>
+                        <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
+                        <p class="desrição__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
+                    </div>
+                    <img src="img/Perfil-escritora 1.svg" alt="foto de perfil da escritora" class="descrição__imagem">
+                </div>
+                <div class="card__botões">
+                    <ul class="botões">
+                    <li class="botões__item"><img src="img/Favoritos.svg" alt="ícone favoritos"></li>
+                    <li class="botões__item"><img src="img/Compras.svg" alt="ícone compras"></li>
+                    </ul>
+                    <a href="#" class="botões__ancora">Saiba mais</a>
+                </div>
             </div>
         </div>
     </section>
@@ -268,6 +280,10 @@
             pagination:{
                 el:'.swiper-pagination',
                 type: 'bullets',
+            },
+            navigation:{
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
             },
             });
     </script>
